# Streaming

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/photons/streaming/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/photons/streaming/: App.kt  CameraFragment.kt  FirstFragment.kt  MainActivity.kt  PermissionsFragment.kt  SecondFragment.kt  VideoEncoder.kt
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/photons/streaming/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libstreaming/: build.gradle
libstreaming/src/androidTest/java/com/photons/libstreaming/: ExampleInstrumentedTest.java
libstreaming/src/main/cpp/: AndroidCameraSubsession.cpp  AndroidFramedSource.cpp  CMakeLists.txt  libstreaming.cpp
libstreaming/src/main/cpp/include/: AndroidCameraSubsession.hh  AndroidFramedSource.hh  log.h
libstreaming/src/main/java/com/photons/libstreaming/: NativeLib.java  RtspServer.java
libstreaming/src/test/java/com/photons/libstreaming/: ExampleUnitTest.java
